--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@cloudinary/url-gen": "^1.11.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@mui/material": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
